# pyosa

./: LICENSE  README.md  example.py  pyproject.toml
pyosa/: __about__.py  __init__.py  main.py
pyosa/tests/: test_estimate.py
